--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^3.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
