--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@types/socket.io-client": "^3.0.0",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.9.0",
     "date-fns": "^3.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
