--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "date-fns": "^3.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
